[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/examples/nine-patch-dialog/nine-patch-dialog-demo.gd" type="Script" id=1]

[node name="NinePatchDialogDemo" type="Node2D"]
script = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 25.0
margin_top = 36.0
margin_right = 325.0
margin_bottom = 136.0
wrap_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 347.0
margin_top = 42.0
margin_right = 551.0
margin_bottom = 118.0

[node name="WidthHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 204.0
margin_bottom = 24.0

[node name="WidthLabel" type="Label" parent="VBoxContainer/WidthHBoxContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Dialog Width:"
align = 2

[node name="WidthLineEdit" type="LineEdit" parent="VBoxContainer/WidthHBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )

[node name="HeightHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 204.0
margin_bottom = 52.0

[node name="HeightLabel" type="Label" parent="VBoxContainer/HeightHBoxContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Dialog Height:"
align = 2

[node name="HeightLineEdit" type="LineEdit" parent="VBoxContainer/HeightHBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )

[node name="UpdateDialogButton" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 204.0
margin_bottom = 76.0
text = "Update Dialog"

[node name="DialagContainer" type="Node2D" parent="."]

[connection signal="pressed" from="VBoxContainer/UpdateDialogButton" to="." method="_on_UpdateDialogButton_pressed"]
